🚀 Server stub
